@@ -3,7 +3,7 @@ import com.github.jengelman.gradle.plugins.shadow.tasks.ShadowJar
 plugins {
     java
     application
-    id("com.github.johnrengelman.shadow") version "6.1.0"
+    id("com.github.johnrengelman.shadow") version "7.0.0"
 }
 
 dependencies {
@@ -11,8 +11,8 @@ dependencies {
     implementation(project(":map"))
     implementation(project(":logging"))
     implementation(project(":nio"))
-    implementation("io.vertx:vertx-core:3.9.4")
-    implementation("io.vertx:vertx-web:3.9.4")
+    implementation("io.vertx:vertx-core:4.2.1")
+    implementation("io.vertx:vertx-web:4.2.1")
     implementation(files("../mods/annotations-20.1.0.jar"))
 }
 
@@ -33,6 +33,10 @@ application {
 
 
 tasks {
+
+    withType<JavaCompile> {
+        options.compilerArgs = listOf("--enable-preview")
+    }
 
     withType<ShadowJar> {
         archiveFileName.set("api.jar")
